app/assets/stylesheets/application.scss
/* Import all of Bootstrap's Css Components */

@import "reset.css";
@import "bootstrap-sprockets";
@import "bootstrap";

@import "font-awesome";
//@import "responsive.scss";

@import "admin/application";
@import "reference_genomes";
@import "libraries";
@import "plates";
@import "sequencing_library_prep_kits";

@media (max-width: $screen-xs-min) {
	body {
		font-size: 1.0em;
	}
}

@media (min-width: $screen-xs-min) and (max-width: $screen-xs-max) {
	body {
		font-size: 1.4em;
	}
}

@media (min-width: $screen-sm-min) and (max-width: $screen-sm-max) {
	body {
		font-size: 1.4em;
	}
}


@media (min-width: $screen-md-min) and (max-width: $screen-md-max) {
	body {
		font-size: 1.4em;
	}
}

@media (min-width: $screen-lg-min) {
	body {
		font-size: 1.6em;
	}
}

//Set class="td-spacing-2" to 'table' elements to set 1em padding top and bottom:
.td-spacing-2 tr td,th {
		padding-bottom: 2em;
}

// See defaults for tooltip in .rvm/gems/ruby-2.2.2/gems/bootstrap-sass-3.3.7/assets/stylesheets/bootstrap
.tooltip.in {
	opacity: 1.0;
}

.tooltip-inner  {
	font-size: 1.3em;
	color: black;
	//aquamarine
	background-color: rgb(127,255,212);
	max-width: 400px;
	text-align: left;
}

.fa-info-circle:hover {
	cursor: help;
}

.waiting * {
	cursor: progress;
}

.modal {
		/* Code from example at https://www.w3schools.com/howto/howto_css_modals.asp */
    display: none; /* Hidden by default */
    position: fixed; /* Stay in place */
    z-index: 10; /* Sit on top. I found out that the active element in the left-hand navbar has a z-index of 2. */
    left: 0;
    top: 0;
    width: 100%; /* Full width */
    height: 100%; /* Full height */
    overflow: auto; /* Enable scroll if needed */
    background-color: rgb(0,0,0); /* Fallback color */
    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
}	

.modal-content {
		/* Code from example at https://www.w3schools.com/howto/howto_css_modals.asp */
    background-color: #fefefe;
    width: 80%; /* Could be more or less, depending on screen size */
    margin: 15% auto; /* 15% from the top and centered */
    padding: 20px;
    border: 1px solid #888;
}

.close-modal {
		/* Code from example at https://www.w3schools.com/howto/howto_css_modals.asp */
		/* class of span tag I often use in a model */
		color: #aaa;
    float: right;
    font-size: 28px;
    font-weight: bold;
		&:hover, &:focus {
			color: black;
			cursor: pointer;
		}
}

.back-btn {
	display: inline-block;
	margin-top: 2em;
}

.jumbotron {
	padding-top: 1em;
	padding-bottom: 1em;
}

.bg-info.jumbotron {
	@extend .bg-info;
}

.map-img {
	width: 100%;
}

.progress {
  max-width: 600px;
  margin:    0.2em 0 0.2em 0;
}

.progress .bar {
  height:  1.2em;
  padding-left: 0.2em;
  color:   white;
  display: none;
}

//minimal table
.min-table {
	th,td {
		padding-left: 1em;
	}
	th:first-child {
		padding-left: 0;
		
	}
	td:first-child {
		padding-left: 0;
	}
}
	
table.attributes i.fa-pencil {
	margin-right: 1em;
}

label.radio_buttons {
	margin-right: 15px;
}

/* the .form-group is the class rails/simple-form gives to inputs. */
.form-group {
	max-width: 50%;
}


select:focus, input:focus, textarea:focus {
  background-color: #FFFFCC; 
}

#app-title {
  font-size: 1.3em;
}

#mytogglelist {
	li.encode-logo a {
		margin: 0;
		padding: 0;
		img {
			background-color: white;
			height: $navbar-height;
		}
	}
 .active a {
		background-color: #8C1515;
	} 
	a:hover {
		background-color: rgba(0,0,0,0.2);
	}
}

#sign-out-btn {
	a:hover {
		background-color: rgba(0,0,0,0.2);
	}
}

.navbar-fixed-top {
  background-color: #8C1515;
  .container-fluid .navbar-header span, .container-fluid .collapse li a, .navbar-right span {
    color: #fbfbf9;
  }
  i {
    color: #fbfbf9;
  }
}

html {
  height: 100%;

  body {
    height: 100%;
  }
}

body { 
  padding-top: $navbar-height;
}

#footer {
  width: 100%;
  max-width: 100%;
  padding: 0;
  margin: 0;
  font-size: 0.8em;

  .navbar-right {
    margin: 0;
    padding: 0;
  }
}

#main {
	height: 100%;
	padding-top: $navbar-height;
}

#sidebar {
  margin: 0;
  .navbar-fixed-side {
    padding: 0;
    margin: 0;
  }

  ul {
		margin-top: 0.5em;
		&:last-child {
			padding-bottom: 1.0em;
		}
    margin-left: 1em;
    margin-right: 1em;
    margin-bottom: 0;
    padding-bottom: 0; 
    a { 
      font-size: 0.8em;
    }
  }
}

.data-container {
  padding-right: 1em;
}

ul.actions {
	//in the header of each show view
	@extend .list-unstyled;
	@extend .list-inline;
	margin-bottom: 2em;
}
		
#meta_attributes {
  border: 1px solid grey;
  @extend .table;
  @extend .table-condensed;
  width: 65%;

  th {
    width: 35%;
  }

  tr:first-child {
    td, th {
      border-top: 0px;
    }
  }

  td, th {
    line-height: 24px !important;
  }
}

.attributes,.table-data {
	@extend .table;
  @extend .table-hover;
  @extend .table-condensed;
  @extend .table-responsive;

  thead tr:first-of-type {
    th {
      border-top: 0px;
    }
	}

	td, th {
    line-height: 24px !important;
  }
}

.plate-table {
	/* see additional styles selecting elements in this table in plates.js.coffee */
	@extend .table-data;
	@extend .table-bordered;
	th {
		font-size: larger;
	}
}

a.new, a.edit, a.delete {
  @extend .btn;
  &:before {
    font-family: "FontAwesome";
    padding-right: 0.5em;
  }
}

.reg-btn {
	@extend .btn;
	@extend .btn-default;
	background-color: #DCDCDC;
}

a.new {
  @extend .btn-success;

  &:before {
    @extend .fa-plus;
  }
}

a.edit {
  @extend .btn-primary;

  &:before {
    @extend .fa-pencil;
  }
}

a.delete {
  @extend .btn-danger;

  &:before {
    @extend .fa-trash;
  }
}

.alert-notice {
  @extend .alert-success;
}

.alert-alert {
  @extend .alert-danger;
}

form {
  max-width: 85%;
}

#error_explanation {
  width: 450px;
  border: 2px solid red;
  padding: 7px;
  padding-bottom: 0;
  margin-bottom: 20px;
  background-color: #f0f0f0;
  h2 {
    text-align: left;
    font-weight: bold;
    padding: 5px 5px 5px 15px;
    font-size: 12px;
    margin: -7px;
    margin-bottom: 0px;
    background-color: #c00;
    color: #fff;
  }
  ul li {
    font-size: 12px;
    list-style: square;
  }
}

